--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,10 +19,9 @@ jobs:
       uses: actions/setup-node@v3
       with:
         node-version: '18'
-        cache: 'npm'
         
     - name: Install dependencies
-      run: npm ci
+      run: npm install
       
     - name: Run linter
       run: npm run lint --if-present
@@ -50,7 +49,7 @@ jobs:
         node-version: '18'
         
     - name: Install dependencies
-      run: npm ci --production
+      run: npm install --production
       
     - name: Create deployment package
       run: |
