--- a/.gitignore
+++ b/.gitignore
@@ -11,22 +11,25 @@ package-lock.json
 settings.json
 
 # Logs
-logs/
+logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-combined-*.log
-error-*.log
-access-*.log
+lerna-debug.log*
 
+# OS files
+Thumbs.db
 
-#  data
-pids/
-*.pid
-*.seed
-*.pid.lock
+# IDE
+.idea/
+*.iml
+
+# React build
+dist/
+client/node_modules/
+client/dist/
 
 # Coverage directory
 coverage/
