--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "scripts": {
     "start": "node --no-deprecation index.js",
     "dev": "nodemon --no-deprecation index.js",
+    "client": "cd client && npm run dev",
+    "client:build": "cd client && npm run build",
+    "client:install": "cd client && npm install",
     "docker:build": "docker build -t api .",
     "docker:run": "docker run -p 1038:1038 api",
     "docker:up": "docker-compose up -d",
@@ -19,6 +22,7 @@
   "dependencies": {
     "archiver": "^7.0.1",
     "axios": "^1.6.8",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
     "chalk": "^4.1.2",
     "cheerio": "^1.0.0",
@@ -30,11 +34,13 @@
     "express-rate-limit": "^7.1.5",
     "form-data": "^4.0.2",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "moment-timezone": "^0.5.47",
     "node-cache": "^5.1.2",
     "node-fetch": "^2.6.1",
     "prom-client": "^15.1.3",
     "qs": "^6.14.0",
+    "uuid": "^9.0.1",
     "winston": "^3.11.0",
     "winston-daily-rotate-file": "^4.7.1"
   }
